🐛 FIX: Tweak for Author boxes on mobile

--- a/style.css
+++ b/style.css
@@ -5145,7 +5145,6 @@ a.sidebar-outlook-link {
 	}
 
 	.author-contact-list {
-		display: block;
 		width: auto;
 	}
 	.author-contact-list li {
